# pysmith

./: .flake8  .gitignore  CI_CD_SETUP.md  CONVERSION_SUMMARY.md  DOCS_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LAZY_LOADING_IMPLEMENTATION.md  LICENSE  MODEL_SQLALCHEMY_CONVERSION.md  NESTED_RELATIONS_GUIDE.md  README.md  RELATIONSHIPS.md  RELATIONSHIPS_IMPLEMENTATION.md  RELATIONSHIP_STRATEGIES.md  REQUIRED_RELATIONSHIPS.md  TYPE_SAFETY_IMPROVEMENTS.md  example.db  pyproject.toml
.github/workflows/: README.md  test.yml
examples/: django_style_orm_example.py  lazy_loading_example.py  model_to_sqlalchemy_example.py  quick_model_to_sqlalchemy_test.py  relationships_example.py  required_relationships_example.py  sqlalchemy_pydantic_example.py  type_safety_example.py
src/pysmith/: __init__.py
src/pysmith/db/: __init__.py  adapters.py  session.py
src/pysmith/models/: __init__.py
tests/: __init__.py  test_lazy_loading.py  test_model.py  test_model_persistence.py  test_model_to_sqlalchemy.py  test_relationships.py  test_required_relationships.py  test_sqlalchemy_to_pydantic.py
