[project]
name = "pysmith"
version = "0.0.1"
description = "A set of Python tools focused on productivity"
readme = "README.md"
authors = [
    { name = "Isaías Subero", email = "info@isaiassubero.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

[tool.ruff]
line-length = 79

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
